[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Sprites/body.png" type="Texture" id=2]
[ext_resource path="res://src/Sprites/eyes.png" type="Texture" id=3]
[ext_resource path="res://src/Sprites/left_hand.png" type="Texture" id=4]
[ext_resource path="res://src/Sprites/head.png" type="Texture" id=5]
[ext_resource path="res://src/Sprites/right_hand.png" type="Texture" id=6]
[ext_resource path="res://src/Actors/Hand.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Camera2D.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 34.73

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.20747
height = 40.1369

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.2001
height = 41.2226

[sub_resource type="CapsuleShape2D" id=4]
radius = 38.18

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 47.3972, 86.3309 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 212.712, 219.061 )
collision_mask = 4
script = ExtResource( 1 )
max_aim_time = 0.6

[node name="Sprite" type="Sprite" parent="."]

[node name="HeadKI" type="KinematicBody2D" parent="Sprite"]
collision_mask = 4

[node name="Head" type="Sprite" parent="Sprite/HeadKI"]
position = Vector2( 0.216156, -131.246 )
z_index = 3
texture = ExtResource( 5 )
centered = false
offset = Vector2( -134, -64 )

[node name="Eyes" type="Sprite" parent="Sprite/HeadKI/Head"]
position = Vector2( 11, 0 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -145, -63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HeadKI"]
position = Vector2( 0, -133.786 )
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="Sprite"]
position = Vector2( -1.78384, -78.246 )
z_index = 2
texture = ExtResource( 2 )
centered = false
offset = Vector2( -130, -115 )

[node name="default_target" type="Node2D" parent="Sprite"]
position = Vector2( 122.216, -63.8225 )

[node name="LeftHandKI" type="KinematicBody2D" parent="Sprite"]
position = Vector2( 47, -82 )
rotation = 1.26885
collision_layer = 8
collision_mask = 4
script = ExtResource( 7 )
forward_max_time = 0.4
hand_speed = 90.0

[node name="LeftHand" type="Sprite" parent="Sprite/LeftHandKI"]
position = Vector2( 1.21619, 2.754 )
rotation = -1.22173
z_index = 1
texture = ExtResource( 4 )
centered = false
offset = Vector2( -180, -115 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/LeftHandKI"]
position = Vector2( 30, 5 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="RightHandKI" type="KinematicBody2D" parent="Sprite"]
position = Vector2( -47, -78 )
rotation = -1.38405
collision_mask = 4

[node name="RightHand" type="Sprite" parent="Sprite/RightHandKI"]
position = Vector2( 0.216187, 1.754 )
rotation = 1.39626
z_index = 3
texture = ExtResource( 6 )
centered = false
offset = Vector2( -85, -115 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/RightHandKI"]
position = Vector2( -28, 3 )
rotation = 1.5708
z_index = 1
shape = SubResource( 3 )

[node name="Player_Target" type="Node2D" parent="Sprite"]
position = Vector2( 171.12, -63.8225 )

[node name="Camera2D" type="Camera2D" parent="Sprite"]
position = Vector2( 0, -70 )
current = true
zoom = Vector2( 1.3, 1.3 )
limit_smoothed = true
drag_margin_left = 0.1
drag_margin_right = 0.1
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="Sprite/Camera2D"]

[node name="Tween" type="Tween" parent="Sprite/Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -44.2795 )
shape = SubResource( 4 )

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -83.4454 )
shape = SubResource( 5 )

[connection signal="timeout" from="Sprite/Camera2D/Timer" to="Sprite/Camera2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
